# codefile

./: CodeFile.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/: codefile.py
