[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codefile"
dynamic = ["version"]
description = "A CLI tool to bundle entire projects into a single AI-friendly context file."
authors = [
    { name = "Nolan Stark" }
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = [
    "ai", "claude", "chatgpt", "gemini", "grok",
    "codefile", "llm", "context", "prompt-engineering",
    "bundler", "devtools", "pack"
]

[project.scripts]
codefile = "codefile:main"

[tool.setuptools.dynamic]
version = {file = "src/config/version.txt"}

[tool.setuptools]
py-modules = ["codefile"]

[tool.setuptools.package-dir]
"" = "src"
